--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.8.2",
     "promise-polyfill": "^8.1.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
